--- a/roles/usr-local-src-directory/tasks/main.yml
+++ b/roles/usr-local-src-directory/tasks/main.yml
@@ -5,3 +5,10 @@
     state: directory
     owner: "{{ user }}"
   become: yes
+
+- name: Ensure that the /usr/local/bin directory exists
+  file:
+    path: /usr/local/bin
+    state: directory
+    owner: "{{ user }}"
+  become: yes
