Update golang, node.js, zprint and chromedriver

--- a/roles/chromedriver/tasks/main.yml
+++ b/roles/chromedriver/tasks/main.yml
@@ -6,10 +6,10 @@
 
 - name: Download the versioned Chromedriver Homebrew recipe
   ansible.builtin.get_url:
-    url: "https://raw.githubusercontent.com/Homebrew/homebrew-cask/{{ git_commit_ref }}/Casks/chromedriver.rb"
+    url: "https://raw.githubusercontent.com/Homebrew/homebrew-cask/{{ git_commit_ref }}/Casks/c/chromedriver.rb"
     dest: "{{ downloads_directory }}/chromedriver/{{ git_commit_ref }}/chromedriver.rb"
 
 - name: Install Chromedriver from Homebrew recipe
   homebrew_cask:
     name: "{{ downloads_directory }}/chromedriver/{{ git_commit_ref }}/chromedriver.rb"
-    state: present
+    state: latest
