--- a/main.yml
+++ b/main.yml
@@ -451,6 +451,9 @@
     - role: yapf
       tags: [programming-utilities, pip-pkg, yapf]
 
+    - role: pcsv
+      tags: [programming-utilities, pip-pkg, pcsv]
+
     - role: prettier
       tags: [programming-utilities, npm-pkg, prettier]
 
